# epiclist

./: .gitignore  .graphqlrc.yml  Cargo.toml  LICENSE.md  README.md  TODO.md  docker-compose.yml  justfile
app/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
app/src/: app.rs  error_template.rs  main.rs
libs/range_ops/: Cargo.toml
libs/range_ops/src/: lib.rs
schemas/: db.sql
scraper/: Cargo.toml
scraper/src/: awesome_links.rs  main.rs
scraper/src/commands/: crawl.rs  ingest.rs  lance.rs  mod.rs
scraper/src/github/: _repo_file.graphql  _repo_file.rs  _repo_view.graphql  _repo_view.rs  mod.rs
scraper/src/parser/: anns.rs  err.rs  mod.rs  tree.rs
