[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
range_ops = { path = "../libs/range_ops" }
anyhow = "1.0.75"
chrono = { version = "0.4.23", features = [
  "std",
  "serde"
], default-features = false }
dotenv = "0.15.0"
enum-as-inner = "0.6.0"
fstrings = "0.2.3"
graphql_client = { version = "0.13.0", features = ["reqwest"] }
reqwest = "0.11.20"
serde = "1.0.188"
pulldown-cmark = { version = "0.9.3", default-features = false, features = [
  "simd"
] }
lazy_static = "1.4.0"
thiserror = "1.0.49"
enum_delegate = "0.2.0"
derive_builder = "0.12.0"
synonym = "0.1.0"
typed-builder = "0.16.2"
enum_variant_macros = "0.3.0"
similar-structs-macros = "0.2.0"
trait-gen = "0.3.2"
born = "0.0.1"
reusable = "0.1.0"
nested_intervals = "0.2.2"
intervaltree = "0.2.7"
itertools = "0.11.0"
addr = "0.15.6"
url = { version = "2.4.1", features = ["serde"] }
intervallum = "1.4.0"
smallvec = { version = "1.11.1", features = ["serde"] }
serde_json = "1.0.107"
sled = "0.34.7"
clap = { version = "4.4.6", features = ["derive", "env"] }
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
fs4 = { version = "0.7.0", features = ["sync", "tokio"] }
uuid = "1.4.1"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "chrono",
  "bigdecimal",
  "json",
  "macros",
  "postgres",
  "uuid"
] }
normalize-url-rs = "0.2.0"
kdam = { version = "0.5.0", features = ["rich", "rayon", "spinner"] }

[dev-dependencies]
insta = "1.33.0"
